<resources>
    <string name="app_name">SI Paddy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="back_button_label">Tombol kembali</string>
    <string name="login_label">Login</string>
    <string name="retry_label">Coba Lagi</string>
    <string name="login_heading_label">Mari daftarkan diri Anda.</string>
    <string name="login_subheading_label">Masuk dengan data yang telah Anda masukkan saat anda mendaftar</string>
    <string name="email_label">Email</string>
    <string name="dash">-</string>
    <string name="password_label">Password</string>
    <string name="signin_label">Masuk</string>
    <string name="dont_have_account_label">Belum punya akun? </string>
    <string name="register_here_label">Daftar disini</string>
    <string name="register_title_label">Buat Akun Baru</string>
    <string name="register_subtitle_label">Lengkapi data berikut untuk mendaftar</string>
    <string name="fullname_label">Nama Lengkap</string>
    <string name="phone_number_label">Nomor hp</string>
    <string name="username_label">Username</string>
    <string name="register_label">Daftar</string>
    <string name="title_history">Riwayat</string>
    <string name="title_profile">Profil</string>
    <string name="welcome_label">Selamat Datang</string>
    <string name="home_card_heading_label">Ada masalah dengan Padi Anda?</string>
    <string name="diagnose_now_label">Diagnosa Sekarang</string>
    <string name="diagnose_heading_label">Diagnosa</string>
    <string name="diagnose_subheading_label">Anda dapat mencoba menggunakan kamera atau memilih foto dari galeri Anda</string>
    <string name="camera_label">Kamera</string>
    <string name="gallery_label">Galeri</string>
    <string name="preview_label">Pratinjau</string>
    <string name="preview_image_label">Pratinjau Gambar</string>
    <string name="start_diagnose_label">Mulai Diagnosa</string>
    <string name="my_account_label">Akun Saya</string>
    <string name="profile_subheading_label">Informasi akun Anda</string>
    <string name="logout_label">Logout</string>
    <string name="handled_status_label">Ditangani</string>
    <string name="ditangani_pada_label">Ditangani pada %1$s</string>
    <string name="oleh_popt_label">oleh: %1$s</string>
    <string name="settings_label">Pengaturan</string>
    <string name="data_not_found_label">Data Tidak Ditemukan</string>
    <string name="history_label">Riwayat</string>
    <string name="history_subheading_label">Periksa apa yang telah Anda diagnosis sebelumnya pada tanaman Padi Anda</string>
    <string name="history_image_view_label">Gambar Riwayat</string>
    <string name="image_capture_button_label">Tombol ambil Gambar</string>
    <string name="pengaduan_manual_label">Pengaduan Manual</string>
    <string name="kelompok_tani_label">Kelompok Tani</string>
    <string name="alamat_label">Alamat</string>
    <string name="submit_label">Submit</string>
    <string name="kecamatan_label">Kecamatan</string>
    <string name="longitude_label">Longitude</string>
    <string name="latitude_label">Latitude</string>
    <string name="deskripsi_label">Deskripsi</string>
    <string name="kabupaten_label">Kabupaten</string>
    <string name="image_sheet_label">Image Sheet</string>
    <string name="okay">Baiklah</string>
    <string name="failed_to_predict_label">Gagal memprediksi. Silakan coba lagi</string>
    <string name="failed_to_get_history">Gagal mendapatkan riwayat.</string>
    <string name="result_label">Hasil</string>
    <string name="result_subheading_label">Hasil Identifikasi Padi Anda.</string>
    <string name="disease_name_label">Nama penyakit</string>
    <string name="predicted_on">Diprediksi pada</string>
    <string name="solution_label">Solusi</string>
    <string name="lorem_label">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultrices, velit nec scelerisque fringilla, lectus est egestas risus, in vehicula tellus diam eu arcu. Fusce facilisis elit semper, pretium arcu ut, ultrices dolor. Aliquam erat volutpat. Nam egestas leo vitae nunc lobortis sagittis. Phasellus varius iaculis quam at posuere. Integer tempor justo in facilisis tempus.</string>
    <string name="please_select_image_label">Silakan pilih gambar</string>
    <string name="pengaduan_tanaman_heading_label">Pengaduan Tanaman</string>
    <string name="pengaduan_tanaman_subheading_label">Lapor masalah tanaman Anda ke petugas</string>
    <string name="image_home_label">Image Home</string>
    <string name="lapor_now_label">Lapor sekarang</string>
    <string name="history_pengaduan_heading_label">Riwayat Pengaduan</string>
    <string name="history_diagnose_subheading_label">Lihat riwayat diagnosa Tanaman Anda</string>
    <string name="history_btn_label">Lihat Riwayat</string>
    <string name="location_not_found_label">Tidak dapat mengambil lokasi. Pastikan GPS aktif</string>
    <string name="take_my_location_label">Ambil lokasi Saat ini</string>
    <string name="username_empty_label">Username tidak boleh kosong</string>
    <string name="password_empty_label">Password tidak boleh kosong</string>
    <string name="namalengkap_empty_label">Nama lengkap tidak boleh kosong</string>
    <string name="nomor_hp_empty_label">Nomor Hp tidak boleh kosong</string>
    <string name="username_length_label">Username minimal 4 karakter</string>
    <string name="password_length_label">Password minimal 8 karakter</string>
    <string name="nomor_hp_length_label">Nomor Hp minimal 10 digit</string>
    <string name="please_wait_label">Mohon menunggu...</string>
    <string name="success_register_label">Akun Anda berhasil terdaftar</string>
    <string name="error_register_label">Gagal mendaftarkan akun Anda</string>
    <string name="session_exp_label">Sesi Anda telah berakhir. Silakan login kembali.</string>
    <string name="riwayat_pengaduan_tanaman_heading_label">Riwayat Pengaduan Tanaman</string>
    <string name="riwayat_pengaduan_tanaman_subheading_label">Periksa hasil pengaduan Tanaman Anda.</string>
    <string name="pending_label">pending</string>
    <string name="verifikasi_status_label">Diverifikasi</string>
    <string name="resolved_label">Selesai</string>
    <string name="lokasi_pengaduan_tanaman_label">Lokasi Pengaduan Tanaman</string>
    <string name="empty_pengaduan_tanaman_label">Belum ada riwayat pengaduan tanaman</string>
    <string name="detail_pengaduan_tanaman_title_label">Detail Laporan</string>
    <string name="plant_image_label">Gambar Tanaman</string>
    <string name="riwayat_pengaduan_tanaman_heading_popt_label">Riwayat Pengaduan Petani</string>
    <string name="riwayat_pengaduan_tanaman_subheading_popt_label">Periksa hasil pengaduan petani.</string>
    <string name="status_label">Status</string>
    <string name="status_pending_label">Pending</string>
    <string name="status_assigned_label">Ditugaskan</string>
    <string name="tanggal_laporan_label">Tanggal Laporan</string>
    <string name="nama_kelompok_tani_label">Nama kelompok tani</string>
    <string name="icon_label">Icon</string>
    <string name="informasi_kelompok_tani_label">Informasi Kelompok Tani</string>
    <string name="lokasi_label">Lokasi</string>
    <string name="koordinat_lokasi_label">Koordinat Lokasi</string>
    <string name="open_in_maps_label">Buka di Maps</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail_pengaduan_tanaman_label">Detail Pengaduan</string>
    <string name="informasi_pengaduan_label">Informasi Pengaduan</string>
    <string name="nama_pelapor_label">Pelapor</string>
    <string name="nomor_hp_pelapor_label">Nomor HP pelapor</string>
    <string name="tanggal_pengaduan_label">Tanggal Pengaduan</string>
    <string name="deskripsi_masalah_tanaman_label">Deskripsi Masalah Tanaman</string>
    <string name="hasil_diagnosa_label">Hasil Diagnosa</string>
    <string name="verifikasi_pengaduan_label">Verifikasi Pengaduan</string>
    <string name="download_file_label">Download Hasil</string>
    <string name="hasil_pemeriksaan_tanaman_label">Hasil Pemeriksaan Tanaman</string>
    <string name="tanggal_verifikasi_label">Diverifikasi pada %1$s</string>
    <string name="nama_popt_label">oleh: %1$s</string>
    <string name="kecamatan_kabupaten_label">Kec. %1$s, Kab. %2$s</string>
    <string name="catatan_popt_label">Catatan POPT</string>
    <string name="informasi_pelapor_label">Informasi Pelapor</string>
    <string name="catatan_from_popt_label">Catatan Hasil Pemeriksaan (Opsional)</string>
    <string name="verified_pengaduan_label">Verifikasi Pengaduan</string>
    <string name="youtube_icon_label">YouTube Icon</string>
    <string name="tonton_tutorial_penanganan_label">Tonton Tutorial Penanganan</string>
    <string name="klik_untuk_menonton_video">Klik untuk menonton video</string>
    <string name="video_penanganan_label">Video Penanganan</string>
    <string name="confidence_score_label">Tingkat Keyakinan:</string>
    <string name="edit_profil_label">Edit Profil</string>
    <string name="password_hint_optional_label">Kosongkan jika tidak ingin mengubah password</string>
    <string name="simpan_perubahan_label">Simpan Perubahan</string>
    <string name="password_optional_info_label">Kosongkan jika tidak ingin mengubah password</string>
    <string name="nomor_hp_hint">Masukkan nomor HP</string>
    <string name="nomor_hp_label">Nomor HP</string>
    <string name="nama_lengkap_hint">Masukkan nama lengkap</string>
    <string name="nama_lengkap_label">Nama Lengkap</string>
    <string name="catatan_popt">Catatan POPT</string>
    <string name="location_label">Lokasi</string>
    <string name="pengaduan_not_found_label">Belum ada riwayat pengaduan</string>
    <string name="to_detail_label">Lihat Detail</string>
    <string name="not_found_history_label">Belum Ada Riwayat</string>
    <string name="pilih_gambar_tanaman_padi_label">Pilih Gambar Tanaman Padi</string>
    <string name="take_picture_or_choose_from_gallery_label">Ambil foto atau pilih dari galeri\nuntuk mendeteksi penyakit tanaman padi</string>
    <string name="change_image">Ganti Gambar</string>
    <string name="close_camera_label">Tutup Kamera</string>
    <string name="toggle_flash_label">Toggle Flash</string>
    <string name="take_photo_label">Ambil Foto</string>
    <string name="disease_info_label">Pastikan gambar jelas dan fokus pada bagian penyakit tanaman padi</string>
    <string name="info_icon_label">Info Icon</string>
    <string name="confidence_icon_label">Confidence Icon</string>
    <string name="description_label">Deskripsi Pengaduan</string>
    <string name="causes_icon_label">Causes Icon</string>
    <string name="causes_label">Penyebab</string>
    <string name="solutions_icon_label">Solutions Icon</string>
    <string name="solutions_label">Solusi &amp; Penanganan</string>
    <string name="watch_solution_video_label">Tonton Video Solusi</string>
    <string name="share_result_label">Bagikan Hasil</string>
    <string name="diagnose_another_image_label">Deteksi Gambar Lain</string>
    <string name="retry_again_label">Coba Lagi</string>
    <string name="start_scan_plant_to_detection_disease_label">Mulai deteksi penyakit pada tanaman padi Anda</string>
    <string name="already_have_account">Sudah punya akun? </string>
    <string name="create_account_label">Buat Akun</string>
    <string name="login_subtitle_label">Login untuk melanjutkan</string>
    <string name="login_title_label">Selamat Datang</string>
    <string name="upload_photo_label">Upload Foto</string>
    <string name="choose_image_label">Pilih Gambar</string>
    <string name="status_and_date_label"><![CDATA[Status & Tanggal]]></string>
    <string name="created_at_label">Dibuat</string>
    <string name="updated_at_label">Diperbarui</string>
    <string name="handle_by_label">Ditangani Oleh</string>
</resources>