<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.pengaduangangguanpadi.PengaduanGangguanPadiFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:paddingHorizontal="@dimen/dp_24"
        android:paddingTop="@dimen/dp_35"
        android:paddingBottom="@dimen/dp_100">


        <ImageButton
            android:id="@+id/backBtn"
            style="@style/BackButton"
            android:layout_width="@dimen/dp_43"
            android:layout_height="@dimen/dp_43"
            android:contentDescription="@string/back_button_label"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_arrow_left_alt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/kelompokTaniEdtLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_50"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backBtn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/kelompokTaniEdt"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:hint="@string/kelompok_tani_label"
                android:inputType="text"
                android:maxLines="1" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/alamatEdtLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kelompokTaniEdtLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alamatEdt"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:hint="@string/alamat_label"
                android:inputType="text"
                android:maxLines="1" />


        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/previewTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:fontFamily="@font/noto_sans_bold"
            android:text="@string/preview_label"
            android:textSize="@dimen/sp_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alamatEdtLayout" />

        <ImageView
            android:id="@+id/previewIv"
            android:layout_width="@dimen/dp_300"
            android:layout_height="@dimen/dp_300"
            android:layout_marginTop="@dimen/dp_10"
            android:contentDescription="@string/preview_image_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/previewTv"
            tools:src="@tools:sample/avatars" />

        <Button
            android:id="@+id/galleryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/gallery_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/previewIv" />

        <Button
            android:id="@+id/cameraBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_label"
            app:layout_constraintBottom_toBottomOf="@+id/galleryBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/galleryBtn" />

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:text="@string/submit_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="35dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>