<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/dp_35"
    android:layout_marginTop="@dimen/dp_35"
    android:layout_marginEnd="@dimen/dp_35"
    tools:context=".presentation.profile.setting.SettingAkunFragment">

    <ImageButton
        android:id="@+id/backBtn"
        style="@style/BackButton"
        android:layout_width="@dimen/dp_48"
        android:layout_height="@dimen/dp_48"
        android:contentDescription="@string/back_button_label"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_arrow_left_alt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editProfileHeadingTv"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/edit_profil_label"
        android:textSize="@dimen/sp_28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_24"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileHeadingTv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_24">

            <TextView
                android:id="@+id/usernameLabelTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_medium"
                android:text="@string/username_label"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:enabled="false"
                app:boxStrokeColor="@color/green_500"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameLabelTv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:fontFamily="@font/noto_sans"
                    android:inputType="text"
                    android:textSize="@dimen/sp_14" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/namaLengkapLabelTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:fontFamily="@font/noto_sans_medium"
                android:text="@string/nama_lengkap"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/namaLengkapInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                app:boxStrokeColor="@color/green_500"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/namaLengkapLabelTv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/namaLengkapEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans"
                    android:hint="@string/nama_lengkap_hint"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/sp_14" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Nomor HP Field -->
            <TextView
                android:id="@+id/nomorHpLabelTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:fontFamily="@font/noto_sans_medium"
                android:text="@string/nomor_hp_label"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/namaLengkapInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nomorHpInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                app:boxStrokeColor="@color/green_500"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nomorHpLabelTv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nomorHpEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans"
                    android:hint="@string/nomor_hp_hint"
                    android:inputType="phone"
                    android:textSize="@dimen/sp_14" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/passwordLabelTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:fontFamily="@font/noto_sans_medium"
                android:text="@string/password_label"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nomorHpInputLayout" />

            <TextView
                android:id="@+id/passwordInfoTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:fontFamily="@font/noto_sans"
                android:text="@string/password_optional_info_label"
                android:textColor="@color/neutral_600"
                android:textSize="@dimen/sp_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordLabelTv" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                app:boxStrokeColor="@color/green_500"
                app:endIconMode="password_toggle"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordInfoTv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans"
                    android:hint="@string/password_hint_optional_label"
                    android:inputType="textPassword"
                    android:textSize="@dimen/sp_14" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveBtn"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_56"
                android:layout_marginTop="@dimen/dp_32"
                android:fontFamily="@font/noto_sans_bold"
                android:text="@string/simpan_perubahan_label"
                android:textSize="@dimen/sp_16"
                app:cornerRadius="@dimen/dp_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>