<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="@dimen/dp_12"
    app:cardElevation="@dimen/dp_4">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_16">

        <TextView
            android:id="@+id/pengaduanTanamanHeadingTv"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/noto_sans_bold"
            android:maxLines="2"
            android:text="@string/pengaduan_tanaman_heading_label"
            android:textSize="@dimen/sp_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pengaduanTanamanSubheadingTv"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:fontFamily="@font/noto_sans"
            android:maxLines="3"
            android:text="@string/pengaduan_tanaman_subheading_label"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pengaduanTanamanHeadingTv" />

        <Button
            android:id="@+id/pengaduanTanamanBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:fontFamily="@font/noto_sans_semibold"
            android:paddingVertical="@dimen/dp_10"
            android:text="@string/lapor_now_label"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pengaduanTanamanSubheadingTv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>